feat: add annotations params for connector
